<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RyanApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="activity_base_title">ActivityBase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main_title">FragmentMian</string>
    <string name="fragment_order_title">FragmentOrder</string>
    <string name="fragment_message_title">FragmentMessage</string>
    <string name="fragment_me_title">FragmentMe</string>
    <string name="load_more">加载更多……</string>
    <string name="title_activity_activity_splash">ActivitySplash</string>
    <string name="loading">请稍等</string>
    <string name="title_activity_activity_me_detail">MeDetail</string>
    <string name="main_nearby">附近</string>
    <string name="main_female">女</string>
    <string name="main_male">男</string>
    <string name="main_hostel">酒店</string>
    <string name="main_food">美食</string>
    <string name="purse">钱包</string>
    <string name="order">订单</string>
    <string name="photoAlbum">相册</string>
    <string name="address">地址</string>
    <string name="myCoupon">我的优惠券</string>
    <string name="freeTickets">免费券</string>
    <string name="sellerTools">卖家工具</string>
    <string name="title_activity_activity_my_account">ActivityMyAccount</string>
    <string name="name">名字</string>
    <string name="account">帐号</string>
    <string name="myQR">我的二维码</string>
    <string name="myAddress">我的地址</string>
    <string name="headImage">头像</string>
    <string name="gender">性别</string>
    <string name="area">地区</string>
    <string name="characterSign">个性签名</string>
    <string name="daDongMen">大东门</string>
    <string name="contacts">通讯录</string>
    <string name="message">消息</string>
    <string name="discovery">发现</string>
    <string name="friendsDynamic">好友动态</string>
    <string name="newActivity">最新活动</string>
    <string name="circle">圈子</string>
    <string name="title_activity_activity_discovery">ActivityDiscovery</string>
</resources>
