<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/activityMainBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/_5dp">

        <RelativeLayout
            android:id="@+id/mainTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/mainTabImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/mainTabTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainTabImage"
                android:layout_centerHorizontal="true"
                android:text="@string/daDongMen"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/orderTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/orderTabImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/orderTabTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orderTabImage"
                android:layout_centerHorizontal="true"
                android:text="@string/contacts"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/messageTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/messageTabImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/messageTabTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/messageTabImage"
                android:layout_centerHorizontal="true"
                android:text="@string/message"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/discoveryTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/discoveryTabImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/discoveryTabTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discoveryTabImage"
                android:layout_centerHorizontal="true"
                android:text="@string/discovery"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/meTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/meTabImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/meTabTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/meTabImage"
                android:layout_centerHorizontal="true"
                android:text="我的"/>

        </RelativeLayout>


    </LinearLayout>

    <View
        android:id="@+id/devider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1px"
        android:layout_above="@id/activityMainBottomBar"
        android:background="@color/devider"/>

    <LinearLayout
        android:id="@+id/activityMainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/devider"
        android:orientation="vertical">
    </LinearLayout>

</RelativeLayout>
